BUG: slight overlap issues with nav bar and carousel

--- a/src/CSS/main.css
+++ b/src/CSS/main.css
@@ -18,7 +18,7 @@ body, html {
 
 #carousel {
   position: absolute;
-  top:10%;
+  top:8rem;
   left:0;
   right:0;
   bottom:0;
